--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "axios": "^0.19.2",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "eslint": "^7.13.0",
+        "eslint-plugin-vue": "^7.1.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
@@ -26,6 +28,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
         "admin-lte": "^3.0.0-alpha.2",
+        "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.29.1",
         "sweetalert2": "^10.9.0",
         "vform": "^1.0.1",
